--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -2,20 +2,18 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8"/>
-    <link href="../lib/external/font-awesome/css/font-awesome.min.css"
+    <link href="/node_modules/font-awesome/css/font-awesome.min.css"
           type="text/css" media="screen" rel="stylesheet"/>
-    <link href="../lib/external/bootstrap/css/bootstrap.min.css"
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
           type="text/css" media="screen" rel="stylesheet"/>
-    <link href="../lib/wed/wed.css" type="text/css" media="screen"
-          rel="stylesheet" />
-    <script type="text/javascript" src="../lib/external/core-js.min.js"></script>
-    <script type="text/javascript" src="../lib/external/zone.js"></script>
-    <script type="text/javascript" src="../lib/external/classList.js"></script>
-    <script type="text/javascript" src="../lib/wed/polyfills/contains.js"></script>
-    <script type="text/javascript" src="../lib/wed/polyfills/matches.js"></script>
-    <script type="text/javascript" src="../lib/wed/polyfills/innerHTML_for_XML.js"></script>
-    <script type="text/javascript" src="../../../node_modules/systemjs/dist/system.js"></script>
-    <script type="text/javascript" src="../lib/system.config.js"></script>
+    <script type="text/javascript" src="/node_modules/core-js/client/shim.min.js"></script>
+    <script type="text/javascript" src="/node_modules/zone.js/dist/zone.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/external/classList.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/contains.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/matches.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/innerHTML_for_XML.js"></script>
+    <script type="text/javascript" src="/node_modules/systemjs/dist/system.js"></script>
+    <script type="text/javascript" src="../system.config.js"></script>
   </head>
   <body>
     <dashboard-app>
@@ -24,7 +22,7 @@
       </p>
     </dashboard-app>
     <script>
-      systemJSConfig.baseURL = "../lib";
+      systemJSConfig.baseURL = "..";
       SystemJS.config(systemJSConfig);
       delete window.systemJSConfig;
       SystemJS.import("dashboard");
