--- a/web/kitchen-sink.html
+++ b/web/kitchen-sink.html
@@ -2,22 +2,34 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8"/>
-    <link href="lib/external/font-awesome/css/font-awesome.min.css"
+    <link href="/node_modules/font-awesome/css/font-awesome.min.css"
           type="text/css" media="screen" rel="stylesheet"/>
-    <link href="lib/external/bootstrap/css/bootstrap.min.css"
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
           type="text/css" media="screen" rel="stylesheet"/>
-    <link href="lib/wed/wed.css" type="text/css" media="screen"
+    <link href="/node_modules/wed/standalone/lib/wed/wed.css" type="text/css"
+          media="screen"
           rel="stylesheet" />
-    <script type="text/javascript" src="lib/external/classList.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/contains.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/matches.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/closest.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/innerHTML_for_XML.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/firstElementChild_etc.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/normalize.js"></script>
-    <script type="text/javascript" src="lib/wed/polyfills/stringRepeat.js"></script>
-    <script type="text/javascript" src="lib/requirejs/require.js"></script>
-    <script type="text/javascript" src="requirejs-config.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/external/classList.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/contains.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/matches.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/innerHTML_for_XML.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/closest.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/firstElementChild_etc.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/normalize.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/stringRepeat.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/requirejs/require.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/requirejs-config.js"></script>
+    <script>
+      require.config({
+        baseUrl: "/node_modules/wed/standalone/lib",
+        paths: {
+          "dashboard": "/build/dev/lib/dashboard",
+          "blueimp-md5": "/node_modules/blueimp-md5/js/md5.min",
+          "wed-store": "/build/dev/lib/wed-store",
+          "kitchen-sink": "/build/dev/lib/kitchen-sink",
+        },
+      });
+    </script>
   </head>
   <body>
     <div class="container">
