Update to work with the requirements of the newest development wed.

--- a/web/kitchen-sink.html
+++ b/web/kitchen-sink.html
@@ -9,6 +9,8 @@
     <link href="/node_modules/wed/standalone/lib/wed/wed.css" type="text/css"
           media="screen"
           rel="stylesheet" />
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/external/core-js.min.js"></script>
+    <script type="text/javascript" src="/node_modules/wed/standalone/lib/external/bluebird.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/external/classList.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/contains.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/matches.js"></script>
@@ -16,7 +18,6 @@
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/closest.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/firstElementChild_etc.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/normalize.js"></script>
-    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/stringRepeat.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/lib/requirejs/require.js"></script>
     <script type="text/javascript" src="/node_modules/wed/standalone/requirejs-config.js"></script>
     <script>
