Include a proper production build.
We now use Webpack to combine the application in a few bundles.

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -6,21 +6,21 @@
           type="text/css" media="screen" rel="stylesheet"/>
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
           type="text/css" media="screen" rel="stylesheet"/>
-    <script class="set-environment" type="text/javascript">
+    <script data-script-type="set-environment">
       window.process = {
         env: {
           NODE_ENV: "development",
         },
       };
     </script>
-    <script type="text/javascript" src="/node_modules/core-js/client/shim.min.js"></script>
-    <script type="text/javascript" src="/node_modules/zone.js/dist/zone.js"></script>
-    <script type="text/javascript" src="/node_modules/wed/standalone/lib/external/classList.js"></script>
-    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/contains.js"></script>
-    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/matches.js"></script>
-    <script type="text/javascript" src="/node_modules/wed/standalone/lib/wed/polyfills/innerHTML_for_XML.js"></script>
-    <script type="text/javascript" src="/node_modules/systemjs/dist/system.js"></script>
-    <script type="text/javascript" src="../system.config.js"></script>
+    <script src="/node_modules/core-js/client/shim.min.js"></script>
+    <script src="/node_modules/zone.js/dist/zone.js"></script>
+    <script src="/node_modules/wed/standalone/lib/external/classList.js"></script>
+    <script src="/node_modules/wed/standalone/lib/wed/polyfills/contains.js"></script>
+    <script src="/node_modules/wed/standalone/lib/wed/polyfills/matches.js"></script>
+    <script src="/node_modules/wed/standalone/lib/wed/polyfills/innerHTML_for_XML.js"></script>
+    <script src="/node_modules/systemjs/dist/system.js"></script>
+    <script src="../system.config.js"></script>
   </head>
   <body>
     <dashboard-app>
@@ -28,7 +28,7 @@
         Loading <i class="fa fa-spinner fa-spin fa-fw"></i>
       </p>
     </dashboard-app>
-    <script>
+    <script data-script-type="bootstrap">
       systemJSConfig.baseURL = "..";
       SystemJS.config(systemJSConfig);
       delete window.systemJSConfig;
